<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_visor"
        tools:context=".Visor">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@mipmap/pet1"
            android:id="@+id/imageView" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="100dp" app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/show_pet"/>
    <Button
            android:text="@string/send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonSend" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintStart_toEndOf="@+id/textMessage" app:layout_constraintHorizontal_bias="0.5"
            android:layout_marginStart="20dp"/>
    <EditText
            android:layout_width="223dp"
            android:layout_height="46dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/textMessage" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:hint="@string/hi"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/buttonSend"
            app:layout_constraintHorizontal_chainStyle="packed"/>
</android.support.constraint.ConstraintLayout>